--- a/accelerator.yaml
+++ b/accelerator.yaml
@@ -1,7 +1,7 @@
 accelerator:
   displayName: Hello World
   description: Hello World sample project for Spring Boot
-  iconUrl: https://icons.iconarchive.com/icons/paomedia/small-n-flat/1024/globe-icon.png
+  iconUrl: https://images.freecreatives.com/wp-content/uploads/2015/05/smiley-559124_640.jpg
   tags:
   - java
   - spring
