--- a/config/workload.yaml
+++ b/config/workload.yaml
@@ -1,10 +1,10 @@
 apiVersion: carto.run/v1alpha1
 kind: Workload
 metadata:
-  name: hello-world
+  name: ko2-demo-acc
   labels:
     apps.tanzu.vmware.com/workload-type: web
-    app.kubernetes.io/part-of: hello-world
+    app.kubernetes.io/part-of: ko2-demo-acc
 spec:
   env:
   - name: APP_MESSAGE
